--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,20 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+  text-align: center;
+  background-color: #4441;
 
-.App-link {
-  color: #61dafb;
+  display: grid;
+  grid-template: 100px 1fr auto / auto;
+  grid-row-gap: 30px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  .App-header {
+    background-color: #fff;
   }
-  to {
-    transform: rotate(360deg);
+  .App-main {
+    justify-self: center;
+    min-width: 800px;
+    background-color: #fff;
   }
-}
+  .App-footer {
+    background-color: #fff;
+  }
