--- a/src/App.css
+++ b/src/App.css
@@ -1,94 +1,141 @@
 .App {
-  min-height: 100vh;
-  /* text-align: center; */
-  background-color: #4441;
-
   display: grid;
-  grid-template: 100px 1fr auto / auto;
-  grid-row-gap: 30px;
+  grid-template: 90px 1fr / auto;
+  grid-row-gap: 60px;
 }
   .App-header {
-    background-color: #fff;
+    align-self: end;
   }
+    .App-header #logo {
+      margin-left: 40px;
+    }
+      .App-header #logo img {}
 
   .App-main {
-    justify-self: center;
-    min-width: 1000px;
-    border: 1px solid #4442;
-    background-color: #fff;
+    display: flex;
+    justify-content: center;
   }
     #e-wallet {
-      padding: 25px;
-      /* border: 1px solid #4442; */
-      border-radius: 5px;
-
+      width: 510px;
+      border: 1px solid #4442;
+      border-radius: 15px;
+      background-color: #fff;
+      box-shadow: 0px 5px 15px 0px #2221;
+      
       display: grid;
-      grid-row-gap: 50px;
+      grid-template: 310px auto 148px / minmax(300px, 455px);
+      justify-content: center;
     }
       #active-card {
-      }
-
-        /* exists in #active-card & #inactive-cards */
-        .card {
-          /* display: inline-block; */
-          width: 240px;
-          margin: auto;
-          padding: 15px;
-          border: 1px solid #444fff22;
-          border-radius: 25px;
-        }
-
-      #add-new-card {
-        justify-self: end;
-      }
-        #add-card, .addBtn, .delete-card {
-          border: none;
-          padding: 10px;
-          border-radius: 10px;
-          font-size: .9rem;
-          font-weight: bold;
-          text-transform: capitalize;
-          color: white;
-          /* background-image: linear-gradient(to right, #823bd7ab, #3fd8e8); */
-          background-color: #ff7b59;
-          background-color: #5b5bab;
-          box-shadow: 0px 2px 4px 0px #444b;
-          transition: .2s;
-        }
-          #add-card:hover, .addBtn:hover {
-            background-color: #e86c54;
-            background-color: #4e4e91;
-          }
-        #add-card-notice span {
-          /* background-image: linear-gradient(to right, #543bd7, #9e54d8); */
-          padding: 5px;
-          border-radius: 8px;
-          font-size: .8rem;
-          font-weight: bold;
-          text-transform: capitalize;
-          color: white;
-          background-color: #5b5bab;
-        }
-
-      #inactive-cards {
+        grid-area: 1 / 1 / 2 / 2;
+        align-self: center;
         justify-self: center;
       }
         /* exists in #active-card & #inactive-cards */
-        #inactive-cards .card {
-          display: inline-block;
-          margin: 0 5px;
+        .card {
+          height: 180px;
+          width: 300px;
+          margin-top: 5px;
+          padding: 20px;
+          /* border: 1px solid #444fff22; */
+          border-radius: 15px;
+          box-sizing: border-box;
+          background-color: black;
+          background-image: linear-gradient(#000, #5b5babdd);
+          box-shadow: 0px 2px 3px 1px #0003;
+          color: white;
+          font-size: 1rem;
+          font-weight: 100;
+          text-shadow: -1px 1px 0px #000;
+          text-shadow: 0 2px 1px #000;
+
+          display: grid;
+          grid-template: 28px 65px 40px auto / 1fr 1fr;
         }
-          .delete-card {
-            padding: 5px;
-            border-radius: 5px;
-            font-weight: unset;
-            text-transform: unset;
-            color: #d1e257;
-            background-color: #528ca8;
-            box-shadow: none;
+          .chip {
+            grid-area: 1 / 1 / 2 / 2;
+            height: 28px;
+            width: 42px;
+            border-radius: 10px;
+            background-image: linear-gradient(to right, #823bd7ab, #3fd8e8)
+          }
+          .vendor {
+            grid-area: 1 / 2 / 2 / 3;
+            justify-self: end;
+            /* font-size: 24px; */
+            font-size: 1.5em;
+            font-weight: normal;
+          }
+          .fullname {
+            grid-area: 2 / 1 / 3 / 3;
+            align-self: center;
+            justify-self: center;
+            /* font-size: 18px; */
+            font-size: 1.125em;
+          }
+          .card-number {
+            grid-area: 3 / 1 / 4 / 4;
+            justify-self: center;
+            /* font-size: 22px; */
+            font-size: 1.375em;
+          }
+          .valid-thru {
+            grid-area: 4 / 2 / 5 / 3;
+            justify-self: end;
+            font-size: 8px;
+            font-size: .5em;
+            font-weight: normal;
           }
 
-      #active-card h1,
+      /* not shown when there is none inactive cards */
+      #inactive-cards {
+        grid-area: 2 / 1 / 3 / 2;
+        margin-bottom: 55px;
+        justify-self: center;
+
+        display: flex;
+        column-gap: 10px;
+      }
+        .inactive-card {}
+          .inactive-card .card {
+            height: 87px;
+            width: 145px;
+            margin-top: 0;
+            padding: 10px;
+            border-radius: 10px;
+            font-size: .45rem;
+
+            grid-template: 12px 30px 20px auto / auto 1fr;
+          }
+            .inactive-card .card .chip {
+              height: 12px;
+              width: 20px;
+              border-radius: 5px;
+            }
+
+          .activate-card {
+            display: block;
+            margin: 10px 0 5px;
+          }
+
+          .activate-card, .delete-card {
+            padding: 3px 6px;
+            border: 1px solid #4448;
+            border-radius: 8px;
+            text-transform: capitalize;
+            font-size: 11px;
+            background-color: #fff;
+            transition: .2s;
+          }
+          
+            .activate-card:hover {
+              border: 1px solid #0f08;
+            }
+            .delete-card:hover {
+              border: 1px solid #f0f8;
+            }
+
+      /* #active-card h1,
       #inactive-cards h1 {
         font-weight: 400;
         text-transform: capitalize;
@@ -105,9 +152,47 @@
       }
       #inactive-cards h1::after {
         background-color: red;
-      }
+      } */
 
-      
+
+
+      #add-new-card {
+        grid-area: 3 / 1 / 4 / 2;
+        padding-top: 55px;
+        border-top: 1px dashed #4e4e91;
+        display: flex;
+        align-items: start;
+        justify-content: center;
+      }
+        /* #add-new-card a {} */
+
+        #add-card, .addBtn {
+          border: none;
+          padding: 10px;
+          border-radius: 10px;
+          font-size: .9rem;
+          font-weight: bold;
+          text-transform: capitalize;
+          color: white;
+          background-color: #003134;
+          box-shadow: 0px 2px 4px 0px #444b;
+          transition: .2s;
+        }
+          #add-card:hover, .addBtn:hover {
+            background-color: #003134ee;
+          }
+        #add-card-notice span {
+          padding: 5px;
+          border-radius: 8px;
+          font-size: .8rem;
+          font-weight: bold;
+          text-transform: capitalize;
+          color: white;
+          background-color: #003134;
+        }
+
+
+      /* css for addcard-page   */
       .createCard {
         width: 400px;
         margin: auto;
@@ -130,3 +215,9 @@
       .addBtn {
         margin-top: 20px;
       }
+
+
+/* all buttons */
+button {
+  cursor: pointer;
+}
