--- a/src/App.css
+++ b/src/App.css
@@ -13,31 +13,32 @@
 
   .App-main {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 30px;
   }
     #e-wallet {
-      width: 510px;
+      width: 610px;
+      padding: 75px 0 55px;
       border: 1px solid #4442;
       border-radius: 15px;
       background-color: #fff;
       box-shadow: 0px 5px 15px 0px #2221;
       
       display: grid;
-      grid-template: 310px auto 148px / minmax(300px, 455px);
+      grid-template: auto auto 93px / minmax(300px, 555px);
       justify-content: center;
     }
       #active-card {
         grid-area: 1 / 1 / 2 / 2;
-        align-self: center;
         justify-self: center;
+        margin-bottom: 55px;
       }
         /* exists in #active-card & #inactive-cards */
         .card {
           height: 180px;
           width: 300px;
-          margin-top: 5px;
           padding: 20px;
-          /* border: 1px solid #444fff22; */
           border-radius: 15px;
           box-sizing: border-box;
           background-color: black;
@@ -46,11 +47,10 @@
           color: white;
           font-size: 1rem;
           font-weight: 100;
-          text-shadow: -1px 1px 0px #000;
           text-shadow: 0 2px 1px #000;
 
           display: grid;
-          grid-template: 28px 65px 40px auto / 1fr 1fr;
+          grid-template: 28px 65px 40px auto / auto 1fr;
         }
           .chip {
             grid-area: 1 / 1 / 2 / 2;
@@ -62,27 +62,23 @@
           .vendor {
             grid-area: 1 / 2 / 2 / 3;
             justify-self: end;
-            /* font-size: 24px; */
-            font-size: 1.5em;
+            font-size: 1.4em;
             font-weight: normal;
           }
           .fullname {
             grid-area: 2 / 1 / 3 / 3;
             align-self: center;
             justify-self: center;
-            /* font-size: 18px; */
             font-size: 1.125em;
           }
           .card-number {
             grid-area: 3 / 1 / 4 / 4;
             justify-self: center;
-            /* font-size: 22px; */
             font-size: 1.375em;
           }
           .valid-thru {
             grid-area: 4 / 2 / 5 / 3;
             justify-self: end;
-            font-size: 8px;
             font-size: .5em;
             font-weight: normal;
           }
@@ -94,18 +90,19 @@
         justify-self: center;
 
         display: flex;
-        column-gap: 10px;
+        column-gap: 15px;
       }
         .inactive-card {}
           .inactive-card .card {
-            height: 87px;
-            width: 145px;
+            height: 105px;
+            width: 175px;
             margin-top: 0;
             padding: 10px;
             border-radius: 10px;
-            font-size: .45rem;
+            font-size: .5833333333333334rem;
+            text-shadow: -1px 1px 0px #000;
 
-            grid-template: 12px 30px 20px auto / auto 1fr;
+            grid-template: 20px 32px 25px auto / auto 1fr;
           }
             .inactive-card .card .chip {
               height: 12px;
@@ -117,6 +114,9 @@
             display: block;
             margin: 10px 0 5px;
           }
+            .activate-card:hover {
+              border: 1px solid #0f08;
+            }
 
           .activate-card, .delete-card {
             padding: 3px 6px;
@@ -127,14 +127,11 @@
             background-color: #fff;
             transition: .2s;
           }
-          
-            .activate-card:hover {
-              border: 1px solid #0f08;
-            }
             .delete-card:hover {
               border: 1px solid #f0f8;
             }
 
+      /* style for commented out headers #active-card, #inactive-cards */
       /* #active-card h1,
       #inactive-cards h1 {
         font-weight: 400;
@@ -155,18 +152,15 @@
       } */
 
 
-
       #add-new-card {
         grid-area: 3 / 1 / 4 / 2;
-        padding-top: 55px;
         border-top: 1px dashed #4e4e91;
         display: flex;
-        align-items: start;
+        align-items: end;
         justify-content: center;
       }
         /* #add-new-card a {} */
-
-        #add-card, .addBtn {
+        #add-card, .add-btn {
           border: none;
           padding: 10px;
           border-radius: 10px;
@@ -181,6 +175,7 @@
           #add-card:hover, .addBtn:hover {
             background-color: #003134ee;
           }
+
         #add-card-notice span {
           padding: 5px;
           border-radius: 8px;
@@ -192,32 +187,82 @@
         }
 
 
-      /* css for addcard-page   */
-      .createCard {
-        width: 400px;
-        margin: auto;
-        padding: 15px;
-        border: 1px solid #444fff22;
-        border-radius: 25px;
+
+
+      /* css for addCard.jsx page   */
+      #add-new-card-area { /*ärver css från #e-wallet diven*/
+        width: 610px;
+        padding: 75px 0 55px;
+        border: 1px solid #4442;
+        border-radius: 15px;
+        background-color: #fff;
+        box-shadow: 0px 5px 15px 0px #2221;
+        
+        display: grid;
+        grid-template: auto auto / minmax(300px, 555px);
+        justify-content: center;
+      }
+        #add-new-card-area .card {
+          justify-self: center;
+          margin-bottom: 55px;
+        }
+
+        .create-card {
+          width: 70%;
+          justify-self: center;
+
+          display: grid;
+          grid-template: auto repeat(4, 40px) / auto;
+          gap: 20px;
+        }
+          #fullname {}
+            #firstname, #lastname {
+              font-size: 1.3rem;
+              color: #444d;
+            }
+            #lastname {
+              margin-left: 10px;
+            }
+
+          #vendor {
+            justify-self: start;
+          }
+
+          #valid-thru > * {
+            height: 100%;
+          }
+            #valid-thru select:last-child {
+              margin-left: 5px;
+            }
+
+          #some-card-numbers > * {
+            height: 100%;
+            border: 1px solid #4448;
+            border-radius: 10px;
+            box-sizing: border-box;
+          }
+            #card-nr {
+              width: calc(75% - 5px);
+            }
+            #CCV {
+              width: 25%;
+              margin-left: 5px;
+            }
+          
+          .add-btn {
+            justify-self: start;
+          }
+
+
+      .back-to-homepage {
+        margin-left: 400px;
+        color: #003134;
       }
 
-      .newCard {
-        width: 400px;
-        height: 200px;
-        margin: auto;
-        margin-bottom: 20px;
-        padding: 15px;
-        border: 1px solid #444fff22;
-        background-color: rgb(91, 110, 160);
-        border-radius: 25px;
-      }
-
-      .addBtn {
-        margin-top: 20px;
-      }
 
 
-/* all buttons */
-button {
-  cursor: pointer;
-}
+
+  /* all buttons */
+  button {
+    cursor: pointer;
+  }
