--- a/src/App.css
+++ b/src/App.css
@@ -34,36 +34,71 @@
         justify-self: center;
         margin-bottom: 55px;
       }
-        /* exists in #active-card & #inactive-cards */
+        /* exists in #active-card. #inactive-cards & at addcard page
+           this is default class for each card within the page
+        */
         .card {
           height: 180px;
           width: 300px;
           padding: 20px;
           border-radius: 15px;
           box-sizing: border-box;
-          background-color: black;
-          background-image: linear-gradient(#000, #5b5babdd);
+          background-color: #003134;
+          background-color: #f5f5f5;
           box-shadow: 0px 2px 3px 1px #0003;
           color: white;
           font-size: 1rem;
           font-weight: 100;
-          text-shadow: 0 2px 1px #000;
+          text-shadow: 0 1px 1px #000;
 
           display: grid;
           grid-template: 28px 65px 40px auto / auto 1fr;
         }
+        /* extra calassed for the card class with some card-specific style */
+        .torkel-express {
+          background-image: linear-gradient(#00e39a, #000);
+        }
+        
+        .ceb {
+          background-image: linear-gradient(rgb(168, 209, 224), rgb(206, 135, 185));
+        }
+        .ceb .vendor {text-transform: uppercase;}
+        /* .ceb .chip {background-image: linear-gradient(to left, #1ff, #f3f)} */
+
+        .john-wick-bank {
+          background-image: linear-gradient(#008ac0, #fff);
+        }
+
+        .moment {
+          background-image: linear-gradient(#000, #5b5babdd);
+        }
+          .moment .vendor {color: #7435ff; text-transform: none;}
+
           .chip {
             grid-area: 1 / 1 / 2 / 2;
             height: 28px;
             width: 42px;
             border-radius: 10px;
-            background-image: linear-gradient(to right, #823bd7ab, #3fd8e8)
+            background-image: linear-gradient(to right, #823bd7ab, #3fd8e8);
+
+            display: flex;
+            align-items: center;
+            justify-content: center;
           }
+            .CCV {
+              color: #fff;
+              font-size: .75em;
+              text-shadow: none;
+              font-style: oblique;
+              text-transform: uppercase;
+            }
+            
           .vendor {
             grid-area: 1 / 2 / 2 / 3;
             justify-self: end;
             font-size: 1.4em;
             font-weight: normal;
+            text-transform: capitalize;
           }
           .fullname {
             grid-area: 2 / 1 / 3 / 3;
@@ -246,36 +281,3 @@
   button {
     cursor: pointer;
   }
-
-
-
-
-  .card {
-    height: 180px;
-    width: 300px;
-    padding: 20px;
-    border-radius: 15px;
-    box-sizing: border-box;
-    background-color: black;
-    background-image: linear-gradient(#000, #5b5babdd);
-    box-shadow: 0px 2px 3px 1px #0003;
-    color: white;
-    font-size: 1rem;
-    font-weight: 100;
-    text-shadow: 0 2px 1px #000;
-
-    display: grid;
-    grid-template: 28px 65px 40px auto / auto 1fr;
-  }
-    .torkel-express {
-      background-image: linear-gradient(#000, #0f0);
-    }
-    .ceb {
-      background-image: linear-gradient(rgb(168, 209, 224), rgb(206, 135, 185));
-    }
-    .john-wick-bank {
-      background-image: linear-gradient(#000, #00f);
-    }
-    .moment {
-      background-image: linear-gradient(#000, #faa);
-    }
